<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.perry.audiorecorder.app.talk.TalkActivity"
    tools:viewBindingIgnore="true">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:background="?android:selectableItemBackgroundBorderless"
                android:contentDescription="@string/settings"
                android:padding="@dimen/spacing_normal"
                android:src="@drawable/ic_settings"
                android:visibility="visible"

                />

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_double"
                android:layout_marginTop="@dimen/spacing_medium"
                android:layout_marginEnd="@dimen/spacing_double"
                android:layout_marginBottom="@dimen/spacing_normal"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:text="@string/title"
                android:textColor="@color/text_primary_light"
                android:textSize="@dimen/text_xlarge" />

            <ImageButton
                android:id="@+id/btn_bookmarks"
                android:layout_width="@dimen/bottom_pnl_small_btn_size"
                android:layout_height="@dimen/bottom_pnl_small_btn_size"
                android:contentDescription="@null"
                android:layout_gravity="center_vertical|end"
                android:background="?android:selectableItemBackgroundBorderless"
                android:src="@drawable/ic_bookmark_bordered"/>

            <ImageButton
                android:id="@+id/btn_share"
                android:layout_width="@dimen/bottom_pnl_small_btn_size"
                android:layout_height="@dimen/bottom_pnl_small_btn_size"
                android:adjustViewBounds="true"
                android:background="?android:selectableItemBackgroundBorderless"
                android:contentDescription="@null"
                android:scaleType="center"
                android:src="@drawable/ic_more_vert"
                android:layout_gravity="center_vertical|end"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_multi_select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/md_blue_gray_500"
            android:elevation="@dimen/toolbar_elevation"
            android:orientation="horizontal"
            android:visibility="gone"
            tools:visibility="gone">

            <ImageButton
                android:id="@+id/btn_close_multi_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:background="?android:selectableItemBackgroundBorderless"
                android:contentDescription="@null"
                android:padding="@dimen/spacing_normal"
                android:src="@drawable/ic_round_close" />

            <TextView
                android:id="@+id/txt_selected_multi"
                style="@style/Text.SectionLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:paddingStart="@dimen/spacing_normal"
                android:paddingLeft="@dimen/spacing_normal"
                android:paddingEnd="@dimen/spacing_normal"
                android:paddingRight="@dimen/spacing_normal"
                android:text="@string/selected"
                android:textColor="@color/text_primary_light" />

            <ImageButton
                android:id="@+id/btn_share_multi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:background="?android:selectableItemBackgroundBorderless"
                android:contentDescription="@null"
                android:padding="@dimen/spacing_normal"
                android:src="@drawable/ic_share" />

            <ImageButton
                android:id="@+id/btn_download_multi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:background="?android:selectableItemBackgroundBorderless"
                android:contentDescription="@null"
                android:padding="@dimen/spacing_normal"
                android:src="@drawable/ic_save_alt" />

            <ImageButton
                android:id="@+id/btn_delete_multi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:background="?android:selectableItemBackgroundBorderless"
                android:contentDescription="@null"
                android:padding="@dimen/spacing_normal"
                android:src="@drawable/ic_delete" />

        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never" />

        <TextView
            android:id="@+id/txtEmpty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:drawableTop="@drawable/ic_audiotrack_64"
            android:drawablePadding="@dimen/spacing_normal"
            android:gravity="center"
            android:text="@string/no_records"
            android:textColor="@color/text_primary_light"
            android:textSize="@dimen/text_large"
            android:visibility="gone"
            tools:text="@string/app_name"
            tools:visibility="visible" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <com.perry.audiorecorder.app.widget.TouchLayout
            android:id="@+id/touch_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:background="@drawable/panel_amber"
            android:clipToPadding="false"
            android:elevation="@dimen/toolbar_elevation"
            android:visibility="gone"
            tools:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txt_progress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="sans-serif-medium"
                        android:padding="@dimen/spacing_medium"
                        android:textColor="@color/text_primary_light"
                        android:textSize="@dimen/text_xlarge"
                        tools:text="00:00:00" />

                    <ImageButton
                        android:id="@+id/btn_decoding"
                        android:layout_width="48dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|start"
                        android:layout_marginStart="@dimen/spacing_small"
                        android:adjustViewBounds="true"
                        android:background="?android:selectableItemBackgroundBorderless"
                        android:contentDescription="@null"
                        android:scaleType="center"
                        android:src="@drawable/ic_loop"
                        android:visibility="gone" />

                    <ImageButton
                        android:id="@+id/btn_check_bookmark"
                        android:layout_width="48dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical|end"
                        android:layout_marginEnd="@dimen/spacing_small"
                        android:adjustViewBounds="true"
                        android:background="?android:selectableItemBackgroundBorderless"
                        android:contentDescription="@null"
                        android:scaleType="center"
                        android:src="@drawable/ic_bookmark_bordered" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp">

                    <com.perry.audiorecorder.app.widget.WaveformViewNew
                        android:id="@+id/record"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:layout_gravity="center" />

                    <ProgressBar
                        android:id="@+id/wave_progress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:visibility="gone" />

                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_tiny">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|bottom"
                        android:layout_marginStart="@dimen/spacing_small"
                        android:text="@string/zero_time"
                        android:textColor="@color/text_primary_light"
                        android:textSize="@dimen/text_normal" />

                    <TextView
                        android:id="@+id/txt_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center_horizontal"
                        android:layout_marginStart="@dimen/spacing_xdouble"
                        android:layout_marginEnd="@dimen/spacing_xdouble"
                        android:drawableEnd="@drawable/ic_pencil_small"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:padding="@dimen/spacing_tiny"
                        android:textColor="@color/text_primary_light"
                        android:textSize="@dimen/text_xmedium"
                        tools:text="Record 2321" />

                    <TextView
                        android:id="@+id/txt_duration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|bottom"
                        android:layout_marginEnd="@dimen/spacing_small"
                        android:textColor="@color/text_primary_light"
                        android:textSize="@dimen/text_normal"
                        tools:text="34:56" />

                </FrameLayout>

                <SeekBar
                    android:id="@+id/play_progress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="1000"
                    android:progress="20" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginTop="@dimen/spacing_tiny"
                    android:layout_marginBottom="@dimen/spacing_tiny"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/btn_prev"
                        android:layout_width="@dimen/bottom_pnl_small_btn_size2"
                        android:layout_height="@dimen/bottom_pnl_small_btn_size2"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/spacing_small"
                        android:adjustViewBounds="true"
                        android:background="?android:selectableItemBackgroundBorderless"
                        android:contentDescription="@null"
                        android:scaleType="center"
                        android:src="@drawable/ic_skip_previous" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="10dp"
                        android:layout_weight="1" />

                    <ImageButton
                        android:id="@+id/btn_delete"
                        android:layout_width="@dimen/bottom_pnl_small_btn_size2"
                        android:layout_height="@dimen/bottom_pnl_small_btn_size2"
                        android:layout_gravity="center"
                        android:adjustViewBounds="true"
                        android:background="?android:selectableItemBackgroundBorderless"
                        android:contentDescription="@null"
                        android:scaleType="center"
                        android:src="@drawable/ic_delete_forever_36"
                        android:visibility="gone" />

                    <ImageButton
                        android:id="@+id/btn_play"
                        android:layout_width="@dimen/bottom_pnl_small_btn_size2"
                        android:layout_height="@dimen/bottom_pnl_small_btn_size2"
                        android:layout_gravity="center"
                        android:layout_marginEnd="@dimen/spacing_small"
                        android:adjustViewBounds="true"
                        android:background="?android:selectableItemBackgroundBorderless"
                        android:contentDescription="@null"
                        android:scaleType="center"
                        android:src="@drawable/ic_play"
                        android:tint="@color/white" />

                    <ImageButton
                        android:id="@+id/btn_stop"
                        android:layout_width="@dimen/bottom_pnl_small_btn_size2"
                        android:layout_height="@dimen/bottom_pnl_small_btn_size2"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/spacing_small"
                        android:adjustViewBounds="true"
                        android:background="?android:selectableItemBackgroundBorderless"
                        android:contentDescription="@null"
                        android:scaleType="center"
                        android:src="@drawable/ic_stop" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="10dp"
                        android:layout_weight="1" />

                    <ImageButton
                        android:id="@+id/btn_next"
                        android:layout_width="@dimen/bottom_pnl_small_btn_size2"
                        android:layout_height="@dimen/bottom_pnl_small_btn_size2"
                        android:layout_gravity="center"
                        android:layout_marginEnd="@dimen/spacing_small"
                        android:adjustViewBounds="true"
                        android:background="?android:selectableItemBackgroundBorderless"
                        android:contentDescription="@null"
                        android:scaleType="center"
                        android:src="@drawable/ic_skip_next" />

                </LinearLayout>
            </LinearLayout>
        </com.perry.audiorecorder.app.widget.TouchLayout>
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ccc" />

    <com.perry.audiorecorder.app.widget.RecordAudioButton
        android:id="@+id/btnVoice"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:background="@drawable/btn_chat_press_normal"
        android:text="按住 说话"
        android:textColor="#7e7e7e" />
</LinearLayout>
